Bug 112348 - Pivot table: page field filtering is not imported correctly from XLS
Summary: Pivot table: page field filtering is not imported correctly from XLS
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
6.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Tamás Zolnai
URL:
Whiteboard: target:6.0.0
Keywords: filter:xls
Depends on:
Blocks: Pivot-Table-XLS
  Show dependency treegraph
 
Reported: 2017-09-12 11:32 UTC by Tamás Zolnai
Modified: 2019-04-18 05:55 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Simple pivit table with one page field (23.50 KB, application/vnd.ms-excel)
2017-09-12 11:33 UTC, Tamás Zolnai
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tamás Zolnai 2017-09-12 11:32:44 UTC
Description:
Page field filtering is a bit different compared to other fields (row, column). When only one item is selected the page field combobox cell shows this selected entry. It seems LO's XLS import does not handle this kind of filtering well. When I open such a document with LO Calc, all item are selected of the page field, not the one which was selected in Excel.

Steps to Reproduce:
1. Open attached XLS in LO
2. Compare the page field selected items to MSO Excel

Actual Results:  
All items are selected.

Expected Results:
Only one item should be selected ("Banana")


Reproducible: Always

User Profile Reset: No

Additional Info:


User-Agent: Mozilla/5.0 (Windows NT 6.3; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/60.0.3112.113 Safari/537.36
Comment 1 Tamás Zolnai 2017-09-12 11:33:06 UTC
Created attachment 136198 [details]
Simple pivit table with one page field
Comment 2 Commit Notification 2017-09-12 13:42:34 UTC
Tamás Zolnai committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=55a43f30a54816e13eb6704a8ec5952a63b01a64

tdf#112348: Pivot table: page field filtering is not imported from XLS

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.