tdf#112348: Pivot table: page field filtering is not imported from XLS

Change-Id: I3477cd17f679bdfefb9340656999630380713d3f
Reviewed-on: https://gerrit.libreoffice.org/42201
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Tamás Zolnai <tamas.zolnai@collabora.com>